QtCore/gen_qmutex.h

class QBasicMutex;
class QMutex;
class QRecursiveMutex;
typedef struct QBasicMutex QBasicMutex;
typedef struct QMutex QMutex;
typedef struct QRecursiveMutex QRecursiveMutex;
QBasicMutex* QBasicMutex_new();
void QBasicMutex_lock(QBasicMutex* self);
void QBasicMutex_unlock(QBasicMutex* self);
bool QBasicMutex_tryLock(QBasicMutex* self);
bool QBasicMutex_tryLock2(QBasicMutex* self);
void QBasicMutex_delete(QBasicMutex* self);
QMutex* QMutex_new();
bool QMutex_tryLock(QMutex* self);
bool QMutex_tryLockWithTimeout(QMutex* self, int timeout);
void QMutex_delete(QMutex* self);
QRecursiveMutex* QRecursiveMutex_new();
void QRecursiveMutex_lock(QRecursiveMutex* self);
bool QRecursiveMutex_tryLock(QRecursiveMutex* self);
void QRecursiveMutex_unlock(QRecursiveMutex* self);
bool QRecursiveMutex_tryLock2(QRecursiveMutex* self);
bool QRecursiveMutex_tryLock1(QRecursiveMutex* self, int timeout);
void QRecursiveMutex_delete(QRecursiveMutex* self);